long multiplcation, operations solver helper, tight-spacing css

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ body {
   margin-top: 150px;  
 }
 
+.tight {
+  padding-top: 2px;  
+}
+
 .hang {
   text-indent: -1.1em;
   margin-left: 1.1em;
